--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
 
     <div class="cta">
-      <h2>Try It Free or Buy Now</h2>
-      <a href="#">Download Trial</a>
+      <h2>Request a Free Trial or Buy Now</h2>
+      <a href="mailto:dataiqconsulting@gmail.com?subject=Requesting%20Free%20Trial%20for%20Duplicate%20Finder&body=Hi%2C%20I%E2%80%99d%20like%20to%20request%20a%207-day%20trial%20for%20DATAIQ%20Duplicate%20Finder.%20Here%E2%80%99s%20my%20info%3A">Request Trial</a>
       <a href="#">Buy Lite for $19</a>
       <a href="#">Buy Single User for $99</a>
       <a href="mailto:dataiqconsulting@gmail.com">Request Campus or Volume License</a>
