--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     </div>
 
     <div class="cta">
-      <h2>Request a Free Trial or Buy Now</h2>
+      <h2>Buy Now – Request by Email</h2>
+      <a href="mailto:dataiqconsulting@gmail.com?subject=Purchase%20Request%20for%20Duplicate%20Finder%20Lite&body=Hi%2C%20I'd%20like%20to%20buy%20the%20Lite%20version%20of%20Duplicate%20Finder.%20Please%20send%20me%20the%20payment%20details.">Buy Lite for $19</a>
+      <a href="mailto:dataiqconsulting@gmail.com?subject=Purchase%20Request%20for%20Duplicate%20Finder%20Single%20User&body=Hi%2C%20I'd%20like%20to%20buy%20the%20Single%20User%20version.%20Please%20send%20me%20the%20payment%20details.">Buy Single User for $99</a>
       <a href="mailto:dataiqconsulting@gmail.com?subject=Requesting%20Free%20Trial%20for%20Duplicate%20Finder&body=Hi%2C%20I%E2%80%99d%20like%20to%20request%20a%207-day%20trial%20for%20DATAIQ%20Duplicate%20Finder.%20Here%E2%80%99s%20my%20info%3A">Request Trial</a>
-      <a href="#">Buy Lite for $19</a>
-      <a href="#">Buy Single User for $99</a>
-      <a href="mailto:dataiqconsulting@gmail.com">Request Campus or Volume License</a>
+      <p style="margin-top: 10px;">📱 Prefer to text? Message us at <strong>(407) 555-1234</strong></p>
     </div>
   </div>
 </body>
